--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,6 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/petcenter_DB?useSSL=false&serverTimezone=America/Bogota
+server.port=8080
+spring.mvc.pathmatch.matching-strategy=ant-path-matcher
+spring.datasource.url=jdbc:mysql://localhost:3306/petcenter_db?useSSL=false&serverTimezone=America/Bogota
 spring.datasource.username=root
 spring.datasource.password=1234
 spring.datasource.dbcp2.driver-class-name=com.mysql.cj.jdbc.Driver
